--- a/movies/pubspec.yaml
+++ b/movies/pubspec.yaml
@@ -29,8 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dartz:
-  mocktail:
+  dartz: ^0.10.1
+  equatable:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,6 +39,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mocktail: ^0.3.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
