--- a/movies/pubspec.yaml
+++ b/movies/pubspec.yaml
@@ -30,7 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
   dartz: ^0.10.1
-  equatable:
+  equatable: ^2.0.3
+  http: ^0.13.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
