--- a/movies/pubspec.yaml
+++ b/movies/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   dartz: ^0.10.1
   equatable: ^2.0.3
   http: ^0.13.4
+  flutter_modular: ^5.0.0
+  flutter_triple: ^1.2.7+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
