--- a/movies/pubspec.yaml
+++ b/movies/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   http: ^0.13.4
   flutter_modular: ^5.0.0
   flutter_triple: ^1.2.7+2
+  flutter_screenutil: ^5.5.2
+  google_fonts: ^2.3.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
