--- a/movies/pubspec.yaml
+++ b/movies/pubspec.yaml
@@ -32,10 +32,9 @@ dependencies:
   dartz: ^0.10.1
   equatable: ^2.0.3
   http: ^0.13.4
-  flutter_modular: ^5.0.0
-  flutter_triple: ^1.2.7+2
   flutter_screenutil: ^5.5.2
   google_fonts: ^2.3.2
+  get: ^4.6.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -45,7 +44,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mocktail: ^0.3.0
-  build_runner: ^2.1.10
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
