--- a/movies/pubspec.yaml
+++ b/movies/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_screenutil: ^5.5.2
   google_fonts: ^2.3.2
   get: ^4.6.3
+  get_it: ^7.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
