--- a/movies/ios/Runner/Info.plist
+++ b/movies/ios/Runner/Info.plist
@@ -43,5 +43,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>DART_DEFINES</key>
+<string>$(DART_DEFINES)</string>
 </dict>
 </plist>
