--- a/movies/pubspec.yaml
+++ b/movies/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   google_fonts: ^2.3.2
   get: ^4.6.3
   get_it: ^7.2.0
+  json_annotation: ^4.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -45,6 +46,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mocktail: ^0.3.0
+  build_runner:
+  json_serializable: ^6.2.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
